@@ -11,12 +11,17 @@ FrostWire 2.7.8 build 731 MAY/15/2024
  - Miscellaneous Play Store compliance enhancements
  - Python version updated to 3.12
  - Python: yt-dlp-2024.4.9
- - com.applovin:applovin-sdk:12.4.3 update
+ - androidx.browser:browser:1.8.0 update
+ - androidx.media2:media2-player:1.3.0 update
  - androidx.media2:media2-session:1.3.0 update
  - androidx.media2:media2-widget:1.3.0 update
- - androidx.media2:media2-player:1.3.0 update
+ - androidx.vectordrawable:vectordrawable-animated:1.2.0 update
+ - com.android.billingclient:billing:7.0.0 update
+ - com.applovin:applovin-sdk:12.4.3 update
+ - com.google.android.material:material:1.12.0 update
  - com.google.firebase:firebase-crashlytics-gradle:3.0.1 update
  - com.google.gms:google-services:4.4.1 update
+ - org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.24 update
 
 FrostWire 2.7.7 build 730 - JAN/01/2024
  - Subscription page improvements
